--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -28,6 +28,11 @@
 	cursor: pointer;
 }
 
+.image-input-group.standalone label {
+	width: 100%;
+	height: 20vh;
+}
+
 .image-input-group label:hover {
 	border: 1px solid #4e73df;
 }
